# cachephant

./: .gitignore  .pdm-python  .pre-commit-config.yaml  CHANGELOG.md  README.md  notes.md  pdm.toml  pyproject.toml  requirements.txt  run_ruff.sh
.github/workflows/: branch.yml  tag.yml
diskcache/: __init__.py  cache.py  decorator.py  interfaces.py  store.py  utils.py
docs/: diskcache.ipynb  example.py  joblib.ipynb
docs/diskcache_cache/: cache.db-shm  cache.db-wal
docs/joblib_cache/__main__--var-folders-hl-g_jjb2j55kn7vf19647szbxm0000gp-T-ipykernel-1457676632/long_func/: func_code.py
docs/joblib_cache/__main__--var-folders-hl-g_jjb2j55kn7vf19647szbxm0000gp-T-ipykernel-1457676632/long_func/ded5d01cb7d3b461984765a0fa308479/: metadata.json  output.pkl
src/cachephant/: __init__.py  cache.py  composite.py  composite_test.py  interfaces.py
src/cachephant/adapter/: db_sqlalchemy.py  db_test.py  filesystem.py  filesystem_test.py  hasher.py  hasher_test.py
src/cachephant/adapters/: db_sqlalchemy.py  db_test.py  evictor.py  evictor_test.py  filesystem.py  filesystem_test.py  hasher.py  hasher_test.py
tests/: test_cache.py  test_decorator.py  test_store.py  test_utils.py
